[build-system]
requires = ["setuptools>=64.4.0", "wheel", "pip>=22.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ScanSlacBot"
version = "1.0.0"
dependencies = [
    "python-dateutil",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "slack_sdk>=3.0",
    "slack_bolt>=1.6.1",
    "certifi",
]

[tool.setuptools]
packages = []
